(lang dune 3.20)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Max Kuttner <mkuttner@proton.me>")

(maintainers "Max Kuttner <mkuttner@proton.me>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "AOC 2025")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
